<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jm2"
    tools:context=".EditarListita">

    <View
        android:id="@+id/imagen1"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:background="#FECECE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen2" />

    <View
        android:id="@+id/imagen2"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:background="#FECECE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen4" />

    <View
        android:id="@+id/imagen3"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#FECECE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRGender" />

    <View
        android:id="@+id/imagen4"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="#FECECE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen3" />

    <TextView
        android:id="@+id/textViewRName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/list_name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/list_pass"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreId" />

    <TextView
        android:id="@+id/textViewRGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/list_image"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaId" />

    <Button
        android:id="@+id/loginid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FECECE"
        android:onClick="Volver"
        android:text="@string/back"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/loginid"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEL"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/nombreId"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:background="#FECECE"
        android:ems="10"
        android:hint="@string/list_nameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRName"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/contraseñaId"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:background="#FECECE"
        android:ems="10"
        android:hint="@string/list_passHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRfirstName"
        tools:textSize="12sp" />

    <RadioGroup
        android:id="@+id/radioGroupEL"
        android:layout_width="125dp"
        android:layout_height="255dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRGender">

        <RadioButton
            android:id="@+id/radioButtonEL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_image1"
            android:textColor="#000000"
            tools:textSize="12sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/radioButtonEL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_image2"
            android:textColor="#000000"
            tools:textSize="12sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/radioButtonEL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_image3"
            android:textColor="#000000"
            android:textSize="12sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RadioButton
            android:id="@+id/radioButtonEL4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_image4"
            android:textColor="#000000"
            android:textSize="12sp" />

    </RadioGroup>

    <Button
        android:id="@+id/loginid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FECECE"
        android:onClick="Enviar"
        android:text="@string/list_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEL"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroupEL"
        app:layout_constraintTop_toBottomOf="@+id/textViewRGender"
        app:srcCompat="@drawable/img1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroupEL"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/img2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroupEL"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/img3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@+id/radioGroupEL"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/img4" />

</androidx.constraintlayout.widget.ConstraintLayout>